Fixes Alignment of Tab Items
## What
The close button is positioned slightly below the tab name.

## Why
This issue occurs due to the addition of `overflow: hidden` to the tab name component.

## How
Resolved the alignment issue by adding `display: flex` to the tab element.

--- a/ontotext-yasgui-web-component/src/components/ontotext-yasgui-web-component/ontotext-yasgui-web-component.scss
+++ b/ontotext-yasgui-web-component/src/components/ontotext-yasgui-web-component/ontotext-yasgui-web-component.scss
@@ -178,6 +178,7 @@
 
     .tabsList {
       .tab {
+        display: flex;
         border: 1px solid #eeeeee;
         margin-right: 0.2em;
         margin-top: 0.2em;
